--- a/GotifyDesktop/Views/MainControlv2View.xaml
+++ b/GotifyDesktop/Views/MainControlv2View.xaml
@@ -15,24 +15,34 @@
       <ColumnDefinition Width="3*"/>
     </Grid.ColumnDefinitions>
       <Menu Grid.Row="0" Grid.ColumnSpan="2" Foreground="White" Background="#3f51b5">
-        <MenuItem Header="File" Background="#3f51b5">
+        <!--<MenuItem Header="File" Background="#3f51b5">
           <MenuItem Header="Exit" Background="#3f51b5"></MenuItem>
-        </MenuItem>
+        </MenuItem>-->
       </Menu>
-      <ListBox Grid.Row="1"
-               ScrollViewer.VerticalScrollBarVisibility="Disabled"
-               Background="#424242"
-               SelectionMode="Single" 
-               SelectedItem="{Binding SelectedItem}" 
-               BorderThickness="0" 
-               Grid.Column="0" 
-               Grid.RowSpan="3" 
-               Items="{Binding Applications}">
+      <ListBox 
+        Grid.Row="1"
+        ScrollViewer.VerticalScrollBarVisibility="Disabled"
+        Background="#424242"
+        SelectionMode="Single" 
+        SelectedItem="{Binding SelectedItem}" 
+        BorderThickness="0" 
+        Grid.Column="0" 
+        Grid.RowSpan="3" 
+        Items="{Binding Applications}">
         <ListBox.ItemTemplate>
         <DataTemplate>
-          <DockPanel>
-            <TextBlock Foreground="White" DockPanel.Dock="Top" Height="32" FontSize="20" HorizontalAlignment="Left" Text="{Binding name}"></TextBlock>
-          </DockPanel>
+          <StackPanel Orientation="Horizontal">
+            <TextBlock
+              Foreground="White"
+              Height="32"
+              FontSize="20"
+              HorizontalAlignment="Left"
+              Text="{Binding name}"/>
+            <!--<Image 
+              Source="avares://GotifyDesktop/Assets/defaultapp.png"
+              Height="16"
+              Width="16"/>-->
+            </StackPanel>
         </DataTemplate>
       </ListBox.ItemTemplate>
     </ListBox>
