--- a/GotifyDesktop/Views/AlertMessageView.xaml
+++ b/GotifyDesktop/Views/AlertMessageView.xaml
@@ -3,6 +3,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="30"
+             Background="#535353"
              x:Class="GotifyDesktop.Views.AlertMessageView">
 
   <Grid>
@@ -14,7 +15,22 @@
       <ColumnDefinition Width="3*"/>
       <ColumnDefinition Width="1*"/>
     </Grid.ColumnDefinitions>
-    <TextBlock Text="Unable to Connect to server" Grid.Column="0" VerticalAlignment="Center"/>
-    <Button Grid.Row="0" Grid.Column="2" HorizontalAlignment="Right" Width="75" Background="SkyBlue" Content="Retry"/>
+    <TextBlock 
+      Foreground="White" 
+      Text="Unable to Connect to server" 
+      Grid.Column="0" 
+      VerticalAlignment="Center"/>
+    <TextBlock
+      Foreground="White"
+      Text="{Binding RetryCount}"
+      Grid.Column="1"/>
+    <Button 
+      Grid.Row="0" 
+      Grid.Column="2" 
+      HorizontalAlignment="Right" 
+      Width="75" 
+      Background="#6c969d"
+      Command="{Binding RetryConnection}"
+      Content="Retry"/>
   </Grid>
 </UserControl>
