--- a/GotifyDesktop/Views/AlertMessageView.xaml
+++ b/GotifyDesktop/Views/AlertMessageView.xaml
@@ -12,22 +12,28 @@
     </Grid.RowDefinitions>
     <Grid.ColumnDefinitions>
       <ColumnDefinition Width="1*"/>
-      <ColumnDefinition Width="3*"/>
+      <ColumnDefinition Width="6*"/>
+      <ColumnDefinition Width="2*"/>
       <ColumnDefinition Width="1*"/>
     </Grid.ColumnDefinitions>
     <TextBlock 
-      Foreground="White" 
+      Foreground="White"
+      Margin="5"
       Text="Unable to Connect to server" 
-      Grid.Column="0" 
+      Grid.Column="0"
+      Grid.ColumnSpan="2"
       VerticalAlignment="Center"/>
     <TextBlock
       Foreground="White"
-      Text="{Binding RetryCount}"
-      Grid.Column="1"/>
+      VerticalAlignment="Center"
+      TextAlignment="Right"
+      Text="{Binding RetryMessage}"
+      Grid.Column="2"/>
     <Button 
       Grid.Row="0" 
-      Grid.Column="2" 
-      HorizontalAlignment="Right" 
+      Grid.Column="3" 
+      HorizontalAlignment="Right"
+      Margin="2,2,2,2"
       Width="75" 
       Background="#6c969d"
       Command="{Binding RetryConnection}"
