--- a/GotifyDesktop/Views/AddServerView.xaml
+++ b/GotifyDesktop/Views/AddServerView.xaml
@@ -7,32 +7,68 @@
              x:Class="GotifyDesktop.Views.AddServerView">
     <Grid>
       <Grid.RowDefinitions>
-        <RowDefinition Height="3*"/>
-        <RowDefinition Height="1*"/>
-        <RowDefinition Height="1*"/>
-        <RowDefinition Height="1*"/>
-        <RowDefinition Height="1*"/>
-        <RowDefinition Height="1*"/>
-        <RowDefinition Height="1*"/>
-        <RowDefinition Height="1*"/>
         <RowDefinition Height="1*"/>
         <RowDefinition Height="3*"/>
+        <RowDefinition Height="1*"/>
       </Grid.RowDefinitions>
       <Grid.ColumnDefinitions>
         <ColumnDefinition Width="1*"/>
         <ColumnDefinition Width="1*"/>
         <ColumnDefinition Width="1*"/>
       </Grid.ColumnDefinitions>
-      <ComboBox Background="White" Margin="5" Grid.Column="1" Grid.Row="1" Items="{Binding Protocols}" SelectedItem="{Binding SelectedProtocol}"/>
-      <TextBox Margin="5" Grid.Column="1" Grid.Row="2" Watermark="Server Url" Text="{Binding Url}" UseFloatingWatermark="True"/>
-      <TextBox Margin="5" Grid.Column="1" Grid.Row="3" Watermark="Server Port" Text="{Binding Port}" UseFloatingWatermark="True"/>
-      <TextBox Margin="5" Grid.Column="1" Grid.Row="4" Watermark="Server Path" Text="{Binding Path, FallbackValue=/}" UseFloatingWatermark="True"/>
-      <TextBox Margin="5" Grid.Column="1" Grid.Row="5" Watermark="Username" Text="{Binding Username}" UseFloatingWatermark="True"/>
-      <TextBox Margin="5" Grid.Column="1" Grid.Row="6" Watermark="Password" Text="{Binding Password}" UseFloatingWatermark="True"/>
-      <Button Content="Test Connection" Grid.Column="1" Grid.Row="7" Margin="5" HorizontalAlignment="Left" Command="{Binding CheckConnection}"/>
-      <DockPanel Grid.Column="1" Grid.Row="8">
-        <Button Content="Save" Command="{Binding Save}" Margin="5" HorizontalAlignment="Center"></Button>
-        <Button Content="Cancel" Command="{Binding Close}" Margin="5" HorizontalAlignment="Right"></Button>
-      </DockPanel>
+      <StackPanel Grid.Column="1" Grid.Row="1">
+        <TextBox Margin="5" 
+                 Watermark="Client Name" 
+                 Text="{Binding ClientName}" 
+                 UseFloatingWatermark="True"
+                 ToolTip.Tip="Client Name"/>
+        <ComboBox Background="White" 
+                  Margin="5" 
+                  Items="{Binding Protocols}" 
+                  SelectedItem="{Binding SelectedProtocol}"
+                  ToolTip.Tip="Http Protocol"/>
+        <TextBox Margin="5" 
+                 Watermark="Server Url" 
+                 Text="{Binding Url}" 
+                 UseFloatingWatermark="True"
+                 ToolTip.Tip="Server Url"/>
+        <TextBox Margin="5" 
+                 Watermark="Server Port" 
+                 Text="{Binding Port}" 
+                 UseFloatingWatermark="True"
+                 ToolTip.Tip="Server Port"/>
+        <TextBox Margin="5" 
+                 Watermark="Server Path" 
+                 Text="{Binding Path}" 
+                 UseFloatingWatermark="True"
+                 ToolTip.Tip="Server Path"/>
+        <TextBox Margin="5" 
+                 Watermark="Username" 
+                 Text="{Binding Username}" 
+                 UseFloatingWatermark="True"
+                 ToolTip.Tip="Username"/>
+        <TextBox Margin="5" 
+                 Watermark="Password" 
+                 Text="{Binding Password}" 
+                 UseFloatingWatermark="True"
+                 ToolTip.Tip="Password"/>
+        <Button Content="Test Connection" 
+                Margin="5" 
+                HorizontalAlignment="Left" 
+                Command="{Binding CheckConnection}"
+                ToolTip.Tip="Test Connection"/>
+        <DockPanel Grid.Column="1" Grid.Row="8">
+          <Button Content="Save" 
+                  Command="{Binding Save}" 
+                  Margin="5" 
+                  HorizontalAlignment="Center"
+                  ToolTip.Tip="Save"></Button>
+          <Button Content="Cancel" 
+                  Command="{Binding Close}" 
+                  Margin="5" 
+                  HorizontalAlignment="Right"
+                  ToolTip.Tip="Close"></Button>
+        </DockPanel>
+      </StackPanel>
     </Grid>
 </UserControl>
