UI Revampe and Sync Changes

--- a/GotifyDesktop/Views/AddServerView.xaml
+++ b/GotifyDesktop/Views/AddServerView.xaml
@@ -3,13 +3,11 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="400" d:DesignHeight="500"
-             x:Class="GotifyDesktop.Views.AddServerView"
-             Background="#898B8B8B">
-  <Border Background="#303030"
-        Width="400"
-        Height="450"
-        CornerRadius="25">
-    <Grid>
+             x:Class="GotifyDesktop.Views.AddServerView">
+  <!--Background="#898B8B8B"-->
+  <!--Background="#303030"-->
+    <Grid Width="400"
+          Height="400">
       <Grid.RowDefinitions>
         <RowDefinition Height="1*"/>
         <RowDefinition Height="3*"/>
@@ -20,22 +18,10 @@
         <ColumnDefinition Width="9*"/>
         <ColumnDefinition Width="1*"/>
       </Grid.ColumnDefinitions>
-      <Border Background="#3f51b5"
-        BorderBrush="Black"
-        Height="50"
-        Width="400"
-        CornerRadius="25"
-        Margin="-5,-50,-5,0"
-        Grid.ColumnSpan="3">
-        <Border Background="#3f51b5"
-          Height="50"
-          Margin="0,30,0,-20"
-          Grid.ColumnSpan="3">
-        </Border>
-      </Border>
-      <Grid Margin="0,30,0,0" 
-            Height="290" 
-            Grid.Column="1" 
+
+      <Grid Margin="0,30,0,0"
+            Height="290"
+            Grid.Column="1"
             Grid.Row="1">
         <Grid.ColumnDefinitions>
           <ColumnDefinition Width="1*"/>
@@ -51,134 +37,121 @@
           <RowDefinition Height="1*"/>
           <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
-          <TextBlock Margin="5"
-                     Grid.Column="0"
-                     Grid.Row="0"
-                     VerticalAlignment="Center"
-                     Text="Client Name"
-                     Foreground="White"
-                     ToolTip.Tip="Client Name"/>
-          <TextBlock Margin="5"
-                     Grid.Column="0"
-                     Grid.Row="1"
-                     VerticalAlignment="Center"
-                     Text="Protocol"
-                     Foreground="White"
-                     ToolTip.Tip="Client Name"/>
-          <TextBlock Margin="5"
-                     Grid.Column="0"
-                     Grid.Row="2"
-                     VerticalAlignment="Center"
-                     Text="Server Url"
-                     Foreground="White"
-                     ToolTip.Tip="Client Name"/>
-          <TextBlock Margin="5"
-                     Grid.Column="0"
-                     Grid.Row="3"
-                     VerticalAlignment="Center"
-                     Text="Server Port"
-                     Foreground="White"
-                     ToolTip.Tip="Client Name"/>
-          <TextBlock Margin="5"
-                     Grid.Column="0"
-                     Grid.Row="4"
-                     VerticalAlignment="Center"
-                     Text="Server Path"
-                     Foreground="White"
-                     ToolTip.Tip="Client Name"/>
-          <TextBlock Margin="5"
-                     Grid.Column="0"
-                     Grid.Row="5"
-                     VerticalAlignment="Center"
-                     Text="UserName"
-                     Foreground="White"
-                     ToolTip.Tip="Client Name"/>
-          <TextBlock Margin="5"
-                     Grid.Column="0"
-                     Grid.Row="6"
-                     VerticalAlignment="Center"
-                     Text="Password"
-                     Foreground="White"
-                     ToolTip.Tip="Client Name"/>
-          <TextBox Margin="5"
-                   Grid.Column="1"
-                   Grid.Row="0"
-                   Watermark="Client Name"
-                   Text="{Binding ClientName}"
-                   ToolTip.Tip="Client Name"/>
-          <ComboBox Background="White"
-                    Grid.Column="1"
-                    Grid.Row="1"
-                    Margin="5"
-                    Items="{Binding Protocols}"
-                    SelectedItem="{Binding SelectedProtocol}"
-                    ToolTip.Tip="Http Protocol"/>
-          <TextBox Margin="5"
-                   Grid.Column="1"
-                   Grid.Row="2"
-                   Watermark="Server Url"
-                   Text="{Binding Url}"
-                   ToolTip.Tip="Server Url"/>
-          <TextBox Margin="5"
-                   Grid.Column="1"
-                   Grid.Row="3"
-                   Watermark="Server Port"
-                   Text="{Binding Port}"
-                   ToolTip.Tip="Server Port"/>
-          <TextBox Margin="5"
-                   Grid.Column="1"
-                   Grid.Row="4"
-                   Watermark="Server Path"
-                   Text="{Binding Path}"
-                   ToolTip.Tip="Server Path"/>
-          <TextBox Margin="5"
-                   Grid.Column="1"
-                   Grid.Row="5"
-                   Watermark="Username"
-                   Text="{Binding Username}"
-                   ToolTip.Tip="Username"/>
-          <TextBox Margin="5"
-                   PasswordChar="*"
-                   Grid.Column="1"
-                   Grid.Row="6"
-                   Watermark="Password"
-                   Text="{Binding Password}"
-                   ToolTip.Tip="Password"/>
-          <Grid Grid.Column="0" Grid.Row="7" Grid.ColumnSpan="2">
-            <Grid.ColumnDefinitions>
-              <ColumnDefinition Width="1*"/>
-              <ColumnDefinition Width="1*"/>
-              <ColumnDefinition Width="1*"/>
-            </Grid.ColumnDefinitions>
-            <Button Content="Test Connection"
+        <TextBlock Margin="5"
                     Grid.Column="0"
-                    Margin="5"
-                    Background="#3f51b5"
-                    Foreground="White"
-                    Width="100"
-                    Command="{Binding CheckConnection}"
-                    ToolTip.Tip="Test Connection"/>
-            <Button Content="Save"
-                    Grid.Column="1"
-                    Background="#3f51b5"
-                    Foreground="White"
-                    Command="{Binding Save}"
-                    Margin="5"
-                    Width="100"
-                    HorizontalAlignment="Center"
-                    IsEnabled="{Binding IsSaveEnabled}"
-                    ToolTip.Tip="Save"/>
-            <Button Content="Cancel"
-                    Grid.Column="2"
-                    Background="#3f51b5"
-                    Foreground="White"
-                    Command="{Binding Close}"
-                    Margin="5"
-                    Width="100"
-                    HorizontalAlignment="Right"
-                    ToolTip.Tip="Close"/>
-          </Grid>
+                    Grid.Row="0"
+                    VerticalAlignment="Center"
+                    Text="Client Name"
+                    ToolTip.Tip="Client Name"/>
+        <TextBlock Margin="5"
+                    Grid.Column="0"
+                    Grid.Row="1"
+                    VerticalAlignment="Center"
+                    Text="Protocol"
+                    ToolTip.Tip="Client Name"/>
+        <TextBlock Margin="5"
+                    Grid.Column="0"
+                    Grid.Row="2"
+                    VerticalAlignment="Center"
+                    Text="Server Url"
+                    ToolTip.Tip="Client Name"/>
+        <TextBlock Margin="5"
+                    Grid.Column="0"
+                    Grid.Row="3"
+                    VerticalAlignment="Center"
+                    Text="Server Port"
+                    ToolTip.Tip="Client Name"/>
+        <TextBlock Margin="5"
+                    Grid.Column="0"
+                    Grid.Row="4"
+                    VerticalAlignment="Center"
+                    Text="Server Path"
+                    ToolTip.Tip="Client Name"/>
+        <TextBlock Margin="5"
+                    Grid.Column="0"
+                    Grid.Row="5"
+                    VerticalAlignment="Center"
+                    Text="UserName"
+                    ToolTip.Tip="Client Name"/>
+        <TextBlock Margin="5"
+                    Grid.Column="0"
+                    Grid.Row="6"
+                    VerticalAlignment="Center"
+                    Text="Password"
+                    ToolTip.Tip="Client Name"/>
+        <TextBox Margin="5"
+                  Grid.Column="1"
+                  Grid.Row="0"
+                  Watermark="Client Name"
+                  Text="{Binding ClientName}"
+                  ToolTip.Tip="Client Name"/>
+        <ComboBox Background="White"
+                  Grid.Column="1"
+                  Grid.Row="1"
+                  Margin="5"
+                  Items="{Binding Protocols}"
+                  SelectedItem="{Binding SelectedProtocol}"
+                  ToolTip.Tip="Http Protocol"/>
+        <TextBox Margin="5"
+                  Grid.Column="1"
+                  Grid.Row="2"
+                  Watermark="Server Url"
+                  Text="{Binding Url}"
+                  ToolTip.Tip="Server Url"/>
+        <TextBox Margin="5"
+                  Grid.Column="1"
+                  Grid.Row="3"
+                  Watermark="Server Port"
+                  Text="{Binding Port}"
+                  ToolTip.Tip="Server Port"/>
+        <TextBox Margin="5"
+                  Grid.Column="1"
+                  Grid.Row="4"
+                  Watermark="Server Path"
+                  Text="{Binding Path}"
+                  ToolTip.Tip="Server Path"/>
+        <TextBox Margin="5"
+                  Grid.Column="1"
+                  Grid.Row="5"
+                  Watermark="Username"
+                  Text="{Binding Username}"
+                  ToolTip.Tip="Username"/>
+        <TextBox Margin="5"
+                  PasswordChar="*"
+                  Grid.Column="1"
+                  Grid.Row="6"
+                  Watermark="Password"
+                  Text="{Binding Password}"
+                  ToolTip.Tip="Password"/>
+        <Grid Grid.Column="0" Grid.Row="7" Grid.ColumnSpan="2">
+          <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*"/>
+            <!--<ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="1*"/>-->
+          </Grid.ColumnDefinitions>
+          <!--Background="#3f51b5"-->
+          <Button Content="Test Connection"
+                  Grid.Column="0"
+                  Margin="5"
+
+                  Command="{Binding CheckConnection}"
+                  ToolTip.Tip="Test Connection"/>
+          <!--<Button Content="Save"
+                  Grid.Column="1"
+                  Command="{Binding Save}"
+                  Margin="5"
+                  Width="100"
+                  HorizontalAlignment="Center"
+                  IsEnabled="{Binding IsSaveEnabled}"
+                  ToolTip.Tip="Save"/>
+          <Button Content="Cancel"
+                  Grid.Column="2"
+                  Command="{Binding Close}"
+                  Margin="5"
+                  Width="100"
+                  HorizontalAlignment="Right"
+                  ToolTip.Tip="Close"/>-->
+        </Grid>
       </Grid>
     </Grid>
-  </Border>
 </UserControl>
