--- a/GotifyDesktop/Views/MainWindow.xaml
+++ b/GotifyDesktop/Views/MainWindow.xaml
@@ -6,6 +6,9 @@
         xmlns:i="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
         xmlns:ia="clr-namespace:Avalonia.Xaml.Interactions.Core;assembly=Avalonia.Xaml.Interactions"
         xmlns:iac="clr-namespace:Avalonia.Xaml.Interactions.Custom;assembly=Avalonia.Xaml.Interactions.Custom"
+        xmlns:ham="clr-namespace:GotifyDesktop.Controls;assembly=GotifyDesktop"
+        xmlns:Controls="clr-namespace:Avalonia.ExtendedToolkit.Controls;assembly=Avalonia.ExtendedToolkit"
+        xmlns:reactiveUi="http://reactiveui.net"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         Width="1200"
         Height="800"
@@ -16,7 +19,7 @@
         Title="GotifyDesktop">
   
 
-  <i:Interaction.Behaviors>
+    <i:Interaction.Behaviors>
       <ia:EventTriggerBehavior EventName="Opened" SourceObject="{Binding MainWindow}">
         <ia:CallMethodAction TargetObject="{Binding}" MethodName="Initialize"/>
       </ia:EventTriggerBehavior>
@@ -76,59 +79,64 @@
     </Window.Styles>-->
 
   <Grid>
-    
     <Grid.RowDefinitions>
-      <!--<RowDefinition Height="50"/>-->
       <RowDefinition Height="1*"/>
-      <RowDefinition Height="50"/>
     </Grid.RowDefinitions>
     <Grid.ColumnDefinitions>
       <ColumnDefinition Width="1*"/>
-      <ColumnDefinition Width="3*"/>
-      <ColumnDefinition Width="1*"/>
+      <ColumnDefinition Width="5*"/>
     </Grid.ColumnDefinitions>
-
-    <!--<Grid Grid.Column="0" 
-          Grid.ColumnSpan="3" 
-          Background="#3f51b5">
-      <Grid.ColumnDefinitions>
-        <ColumnDefinition Width="65"/>
-        <ColumnDefinition Width="40"/>
-        <ColumnDefinition Width="3*"/>
-        <ColumnDefinition Width="90"/>
-      </Grid.ColumnDefinitions>
-      <TextBlock Text="Gotify" 
-              Foreground="White" 
-              FontWeight="Regular"
+    
+    <!--<ListBox
+      ScrollViewer.VerticalScrollBarVisibility="Disabled"
+      MinWidth="150"
+      Grid.Column="0"
+      SelectionMode="Single"
+      Items="{Binding ServerViewModels}"
+      SelectedItem="{Binding SelectedItem}"
+      BorderThickness="0,0,2,0"
+      Grid.Row="0"
+      MaxWidth="300">
+      <ListBox.ItemTemplate>
+        <DataTemplate>
+          <Grid DockPanel.Dock="Left">
+            <Grid.ColumnDefinitions>
+              <ColumnDefinition Width="1*"/>
+              <ColumnDefinition Width="1*"/>
+            </Grid.ColumnDefinitions>
+            <ListBoxItem
+              Height="32"
+              FontSize="20"
+              Content="{Binding CurrentServer.Url}"
               Grid.Column="0"
-              FontSize="24"
-              Margin="10,0,0,0"
-              VerticalAlignment="Center"/>
-      <TextBlock Text=""
-              Foreground="White"
-              FontWeight="Regular"
-              DockPanel.Dock="Left"
-              Grid.Column="1"
-              FontSize="14"
-              Margin="5,4,0,0"
-              VerticalAlignment="Center"/>
-      <Button Content="Logout"
-              Foreground="White"
-              FontWeight="Regular"
+              HorizontalAlignment="Left"/>
+            --><!--<Image
+              Source="avares://GotifyDesktop/Assets/Alert-Light.ico"
+              Height="16"
+              Width="16"
               DockPanel.Dock="Right"
-              Grid.Column="3"
-              FontSize="16"
-              Background="#3f51b5"
-              BorderThickness="0"
-              VerticalAlignment="Center"
-              Command="{Binding LogoutAsync}"/>
-    </Grid>-->
-      
-    <!--<Menu Grid.Row="0" Grid.ColumnSpan="3" Foreground="White" Background="#3f51b5">
-      --><!--<MenuItem Header="Server" Command="{Binding ChangeServer}"/>--><!--
-    </Menu>-->
+              Margin="5"
+              Grid.Column="1"
+              IsVisible="{Binding HasAlert}"
+              HorizontalAlignment="Right"/>--><!--
+          </Grid>
+        </DataTemplate>
+      </ListBox.ItemTemplate>
+    </ListBox>-->
+    <Button
+        Grid.Row="2"
+        Content="Settings"
+        VerticalAlignment="Bottom"
+        Height="32"
+        FontSize="15"
+        Command="{Binding NavigateToSettings}"/>
+    <reactiveUi:RoutedViewHost Grid.Column="1" Grid.Row="0" Router="{Binding Router}">
+      <reactiveUi:RoutedViewHost.DefaultContent>
+        <TextBlock Text="Default Content" />
+      </reactiveUi:RoutedViewHost.DefaultContent>
+    </reactiveUi:RoutedViewHost>
 
-    <DockPanel Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Grid.RowSpan="3">
+    <!--<DockPanel Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Grid.RowSpan="3">
       <local:AlertMessageView
         DataContext="{Binding AlertMessageViewModel}"
         IsVisible="{Binding IsDisplayVisible, FallbackValue=false}"
@@ -144,7 +152,7 @@
           <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
 
-        <!--Background="#424242"-->
+        --><!--Background="#424242"--><!--
         <ListBox
           ScrollViewer.VerticalScrollBarVisibility="Disabled"
           
@@ -162,7 +170,7 @@
                   <ColumnDefinition Width="1*"/>
                   <ColumnDefinition Width="1*"/>
                 </Grid.ColumnDefinitions>
-                <!--Foreground="White"-->
+                --><!--Foreground="White"--><!--
                 <TextBlock
                   
                   Height="32"
@@ -183,8 +191,8 @@
             </DataTemplate>
           </ListBox.ItemTemplate>
         </ListBox>
-        <!--Background="#424242"
-        Foreground="White"-->
+        --><!--Background="#424242"
+        Foreground="White"--><!--
         <Button
           Grid.Row="1"
           Content="Settings"
@@ -193,8 +201,8 @@
 
           Height="32"
           FontSize="15"/>
-        <!--Background="#424242"
-        Foreground="White"-->
+        --><!--Background="#424242"
+        Foreground="White"--><!--
         <Button
           Grid.Row="2"
           Content="Logout"
@@ -214,8 +222,8 @@
                       Items="{Binding MessageModels}">
           <ItemsControl.ItemTemplate>
             <DataTemplate>
-              <!--Background="#424242"
-                BorderBrush="#424242"-->
+              --><!--Background="#424242"
+                BorderBrush="#424242"--><!--
               <Border HorizontalAlignment="Center"
                 MinWidth="600"
                 MaxWidth="600"
@@ -230,7 +238,7 @@
                          Width="64"
                          DockPanel.Dock="Left">
                   </Image>
-                  <!--Foreground="White"-->
+                  --><!--Foreground="White"--><!--
                   <TextBlock 
                              DockPanel.Dock="Top"
                              Height="32"
@@ -239,7 +247,7 @@
                              HorizontalAlignment="Left"
                              Text="{Binding title}">
                   </TextBlock>
-                  <!--Foreground="White"-->
+                  --><!--Foreground="White"--><!--
                   <TextBlock 
                              DockPanel.Dock="Bottom"
                              TextWrapping="Wrap"
@@ -254,8 +262,8 @@
         </ItemsControl>
       </ScrollViewer>
     </DockPanel>
-    <!--Background="#3f51b5"
-      Foreground="White"-->
+    --><!--Background="#3f51b5"
+      Foreground="White"--><!--
     <Button
       Classes="Round"
       Grid.Column="3"
@@ -294,6 +302,6 @@
       Grid.Row="0"
       Grid.RowSpan="3"
       Grid.ColumnSpan="3"
-      IsVisible="{Binding IsVisible, FallbackValue=false}"/>
+      IsVisible="{Binding IsVisible, FallbackValue=false}"/>-->
   </Grid>
 </Window>
