--- a/GotifyDesktop/Views/OptionsView.xaml
+++ b/GotifyDesktop/Views/OptionsView.xaml
@@ -3,13 +3,13 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="GotifyDesktop.Views.OptionsView"> 
-  <Grid 
-        Width="400"
+             x:Class="GotifyDesktop.Views.OptionsView"
+             xmlns:reactiveUi="http://reactiveui.net"> 
+  <Grid Width="400"
         Height="400">
-  <StackPanel Height="30" Orientation="Horizontal" VerticalAlignment="Top">
-    <TextBlock Text="Theme" Margin="25,0,0,0" VerticalAlignment="Center"/>
-    <DropDown Margin="5" Width="100" Items="{Binding Themes}" SelectedItem="{Binding SelectedTheme}"/>
+  <StackPanel Orientation="Horizontal" VerticalAlignment="Top">
+    <TextBlock Height="35" Text="Theme" Margin="0,15,0,0" VerticalAlignment="Center"/>
+    <DropDown Margin="5" Height="25" Width="100" Items="{Binding Themes}" SelectedItem="{Binding SelectedTheme}"/>
   </StackPanel>
   </Grid>
 </UserControl>
