--- a/GotifyDesktop/Views/SettingsView.xaml
+++ b/GotifyDesktop/Views/SettingsView.xaml
@@ -5,34 +5,33 @@
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="500"
              xmlns:local="clr-namespace:GotifyDesktop.Views"
              x:Class="GotifyDesktop.Views.SettingsView">
-    <!--Background="#898B8B8B"-->
-  <Grid 
-        Width="450"
-        Height="500">
+  <Grid Margin="10">
     <Grid.RowDefinitions>
+      <RowDefinition Height="40"/>
       <RowDefinition Height="1*"/>
       <RowDefinition Height="32"/>
     </Grid.RowDefinitions>
-    <TabControl 
-                BorderBrush="Black"
-                BorderThickness="1"
-                Grid.Row="0">
-      <TabItem Header="Servers">
-        <local:AddServerView DataContext="{Binding AddServerViewModel}"/>
+    <TextBlock Grid.Row="0" 
+               Text="Settings"
+               FontSize="25"/>
+    <TabControl Grid.Row="1">
+      <TabItem Header="Servers" Width="150">
+          <local:AddServerView Margin="10"
+            DataContext="{Binding AddServerViewModel}"/>
       </TabItem>
-      <TabItem Header="Options">
+      <TabItem Header="Options" IsVisible="False">
         <local:OptionsView DataContext="{Binding OptionsViewModel}"/>
       </TabItem>
     </TabControl>
-    <Grid Grid.Row="1">
+    <Grid Grid.Row="2">
       <Grid.ColumnDefinitions>
         <ColumnDefinition Width="1*"/>
         <ColumnDefinition Width="1*"/>
         <ColumnDefinition Width="1*"/>
     </Grid.ColumnDefinitions>
-        <Button Grid.Column="0" Command="{Binding Apply}">Apply</Button>
+        <!--<Button Grid.Column="0" Command="{Binding Apply}">Apply</Button>
         <Button Grid.Column="1" Command="{Binding Save}">Save</Button>
-        <Button Grid.Column="2" Command="{Binding Cancel}">Cancel</Button>
+        <Button Grid.Column="2" Command="{Binding Cancel}">Cancel</Button>-->
     </Grid>
   </Grid>
 </UserControl>
