--- a/GotifyDesktop/Views/ServerView.xaml
+++ b/GotifyDesktop/Views/ServerView.xaml
@@ -5,44 +5,54 @@
              xmlns:local="clr-namespace:GotifyDesktop.Views"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="GotifyDesktop.Views.ServerView">
-  
-  <DockPanel Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Grid.RowSpan="3">
-      <local:AlertMessageView
-        DataContext="{Binding AlertMessageViewModel}"
-        IsVisible="{Binding IsDisplayVisible, FallbackValue=false}"
-        DockPanel.Dock="Top">
-      </local:AlertMessageView>
-      <Grid DockPanel.Dock="Left">
-        <Grid.RowDefinitions>
-          <RowDefinition Height="2*"/>
-          <RowDefinition Height="32"/>
-          <RowDefinition Height="32"/>
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-          <ColumnDefinition Width="1*"/>
-        </Grid.ColumnDefinitions>
 
-        <ListBox
-          ScrollViewer.VerticalScrollBarVisibility="Disabled"         
-          MinWidth="150"
-          SelectionMode="Single"
-          SelectedItem="{Binding SelectedItem}"
-          BorderThickness="0"
-          Grid.Row="0"
-          Items="{Binding Applications}"
-          MaxWidth="300">
-          <ListBox.ItemTemplate>
-            <DataTemplate>
-              <Grid DockPanel.Dock="Left">
+  <UserControl.Styles>
+    <Style Selector="ListBoxItem">
+      <Setter Property="VerticalAlignment" Value="Stretch"/>
+      <Setter Property="HorizontalAlignment" Value="Stretch"/>
+      <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+      <Setter Property="VerticalContentAlignment" Value="Stretch"/>
+      <Setter Property="Margin" Value="0"/>
+      <Setter Property="BorderThickness" Value="0"/>
+      <Setter Property="Padding" Value="0"/>
+    </Style>
+  </UserControl.Styles>
+
+  <DockPanel>
+      <ListBox
+        DockPanel.Dock="Left"
+        ScrollViewer.VerticalScrollBarVisibility="Disabled" 
+        MinWidth="150"
+        SelectionMode="Single" 
+        SelectedItem="{Binding SelectedItem}"
+        BorderThickness="0"
+        Grid.Row="0"
+        Grid.RowSpan="2"
+        Items="{Binding Applications}"
+        MaxWidth="300">
+        <ListBox.ItemTemplate>
+          <DataTemplate>
+            <Button
+              Background="Transparent"
+              BorderThickness="0"
+              HorizontalAlignment="Stretch"
+              VerticalAlignment="Stretch"
+              VerticalContentAlignment="Stretch"
+              HorizontalContentAlignment="Stretch"
+              IsHitTestVisible="False"
+              Command="{Binding $parent[local:ServerView].DataContext.Apply}"
+                CommandParameter="{Binding #MyTextBlock.Text}">
+              <Grid>
                 <Grid.ColumnDefinitions>
                   <ColumnDefinition Width="1*"/>
                   <ColumnDefinition Width="1*"/>
                 </Grid.ColumnDefinitions>
                 <TextBlock
+                  x:Name="MyTextBlock"
                   Height="32"
                   FontSize="20"
                   Text="{Binding name}"
-                  Grid.Column="0" 
+                  Grid.Column="0"
                   HorizontalAlignment="Left"/>
                 <Image
                   Source="avares://GotifyDesktop/Assets/Alert-Light.ico"
@@ -54,19 +64,15 @@
                   IsVisible="{Binding HasAlert}"
                   HorizontalAlignment="Right"/>
               </Grid>
-            </DataTemplate>
-          </ListBox.ItemTemplate>
-        </ListBox>
-            
-        <!--<Button
-          Grid.Row="2"
-          Content="Settings"
-          VerticalAlignment="Bottom"
-          Height="32"
-          FontSize="15"
-          Command="{Binding ShowSettings}"/>-->
-      </Grid>
-
+            </Button>
+          </DataTemplate>
+        </ListBox.ItemTemplate>
+      </ListBox>
+    <local:AlertMessageView
+      DataContext="{Binding AlertMessageViewModel}"
+      IsVisible="{Binding IsDisplayVisible, FallbackValue=true}"
+      DockPanel.Dock="Top">
+    </local:AlertMessageView>
       <ScrollViewer Grid.Column="1" Grid.Row="1" DockPanel.Dock="Right">
         <ItemsControl 
                       Grid.Row="1"
@@ -79,7 +85,6 @@
                 MinWidth="600"
                 MaxWidth="600"
                 Margin="10"
-                
                 BorderThickness="2"
                 CornerRadius="3"
                 Padding="4">
@@ -89,8 +94,6 @@
                          Width="64"
                          DockPanel.Dock="Left">
                   </Image>
-                  
-  
                   <TextBlock 
                              DockPanel.Dock="Top"
                              Height="32"
@@ -99,7 +102,6 @@
                              HorizontalAlignment="Left"
                              Text="{Binding title}">
                   </TextBlock>
-                  
                   <TextBlock 
                              DockPanel.Dock="Bottom"
                              TextWrapping="Wrap"
